2011-04-20  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        [chromium] Fix incorrect scissor rect for layers that render into a rendersurface
        https://bugs.webkit.org/show_bug.cgi?id=59020

        * compositing/flat-with-transformed-child-expected.txt: Added.
        * compositing/flat-with-transformed-child.html: Added.
        * platform/chromium-gpu-linux/compositing/flat-with-transformed-child-expected.checksum: Added.
        * platform/chromium-gpu-linux/compositing/flat-with-transformed-child-expected.png: Added.
        * platform/chromium/test_expectations.txt:
2011-04-20  Adrienne Walker  <enne@google.com>

        Reviewed by Kenneth Russell.

        [chromium] Fix incorrect scissor rect for layers that render into a rendersurface
        https://bugs.webkit.org/show_bug.cgi?id=59020

        mapRect is the incorrect transform here.  The parent scissor rect
        needs to be projected into layer space instead.

        Test: compositing/flat-with-transformed-child.html

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::updatePropertiesAndRenderSurfaces):

Canonical link: https://commits.webkit.org/74794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85075 268f45cc-cd09-0410-ab3c-d52691b4dbfc